crates/jdlint_dart_parser/tests/snapshots/parser_tests__snap_generic_function.snap
---
source: crates/jdlint_dart_parser/tests/parser_tests.rs
assertion_line: 1320
expression: "prog.declarations[0]"
---
Function(
    FunctionDecl {
        annotations: [],
        is_external: false,
        is_async: false,
        is_generator: false,
        is_getter: false,
        is_setter: false,
        return_type: Some(
            Named(
                NamedType {
                    segments: [
                        Identifier {
                            name: "T",
                            span: Span {
                                start: 0,
                                end: 1,
                            },
                        },
                    ],
                    type_args: [],
                    is_nullable: false,
                    span: Span {
                        start: 0,
                        end: 2,
                    },
                },
            ),
        ),
        name: Identifier {
            name: "identity",
            span: Span {
                start: 2,
                end: 10,
            },
        },
        type_params: [
            TypeParam {
                name: Identifier {
                    name: "T",
                    span: Span {
                        start: 11,
                        end: 12,
                    },
                },
                bound: None,
                span: Span {
                    start: 11,
                    end: 12,
                },
            },
        ],
        params: FormalParamList {
            positional: [
                FormalParam {
                    annotations: [],
                    is_required: true,
                    is_covariant: false,
                    is_final: false,
                    is_field: false,
                    is_super: false,
                    param_type: Some(
                        Named(
                            NamedType {
                                segments: [
                                    Identifier {
                                        name: "T",
                                        span: Span {
                                            start: 14,
                                            end: 15,
                                        },
                                    },
                                ],
                                type_args: [],
                                is_nullable: false,
                                span: Span {
                                    start: 14,
                                    end: 16,
                                },
                            },
                        ),
                    ),
                    name: Identifier {
                        name: "value",
                        span: Span {
                            start: 16,
                            end: 21,
                        },
                    },
                    default_value: None,
                    function_params: None,
                    span: Span {
                        start: 14,
                        end: 21,
                    },
                },
            ],
            optional_positional: [],
            named: [],
            span: Span {
                start: 13,
                end: 23,
            },
        },
        body: Some(
            Arrow(
                Ident(
                    Identifier {
                        name: "value",
                        span: Span {
                            start: 26,
                            end: 31,
                        },
                    },
                ),
                Span {
                    start: 23,
                    end: 32,
                },
            ),
        ),
        span: Span {
            start: 0,
            end: 32,
        },
    },
)
